workspace = { members = ["server"] }
[package]
name = "system32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = {version = "0.5.1",features = ["aead"]}
ctrlc = "3.4.4"

lazy_static = "1.5.0"
winapi = { version = "0.3.9", features =  ["winuser", "errhandlingapi", "processthreadsapi"]  }
